# scenario_fmu

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  notes.md  readme.md  vcpkg.json
libs/: CMakeLists.txt
libs/scenario_fmu/: CMakeLists.txt  version.map
libs/scenario_fmu/include/: fmi2.h  scenario_fmu.hpp
libs/scenario_fmu/include_private/: fmi2model.hpp  interpolation.hpp  scenario_fmu.hpp  series.hpp  string.hpp
libs/scenario_fmu/src/: fmi2model.cpp  scenario_fmu_interface.cpp
python/: README.md  pyproject.toml
python/src/scenario_fmu_generator/: __init__.py  cli_fmu_packager.py  cli_fmu_runner.py  cli_ssp_params.py  fmu_packager.py  model_description.py  ssp_parameter_builder.py  utils.py  variable.py
reference/: results.csv
reference_results/: readme.md  results.csv  scenario.fmu
scipts/: run_fmu.py
scripts/: package_fmu.py  run_fmu.py
test/: CMakeLists.txt  basic_test.cpp  scenario_test.cpp
